<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/main_contalner"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="3dp" >

        <LinearLayout
            android:id="@+id/main_tab_1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                 <ImageView
	                android:id="@+id/main_tab_1_icon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/nav_personalcenter_selected" />
                  <TextView
	                android:id="@+id/main_tab_1_count"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:paddingLeft="2dp"
	                android:paddingRight="2dp"
	                android:visibility="invisible"
	                android:background="@drawable/red_bg"
	                android:textSize="@dimen/font_style_9"
	                android:textColor="@color/white" />
            </LinearLayout>
           

            <TextView
                android:id="@+id/main_tab_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footer_individual"
                android:textSize="@dimen/font_style_13"
                android:textColor="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_tab_2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
   <LinearLayout 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                 <ImageView
	                android:id="@+id/main_tab_2_icon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/nav_manage_default" />
                  <TextView
	                android:id="@+id/main_tab_2_count"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                 android:paddingLeft="2dp"
	                android:paddingRight="2dp"
	                android:visibility="invisible"
	                android:background="@drawable/red_bg"
	                android:textSize="@dimen/font_style_9"
	                android:textColor="@color/white" />
            </LinearLayout>
           
            <TextView
                android:id="@+id/main_tab_2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/footer_somber"
                 android:textSize="@dimen/font_style_13"
                android:text="@string/footer_manager" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_tab_3"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/main_tab_3_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nav_team_default" />

            <TextView
                android:id="@+id/main_tab_3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textSize="@dimen/font_style_13"
                android:text="@string/footer_team"
                android:textColor="@color/footer_somber" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_tab_4"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/main_tab_4_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nav_consultation_default" />

            <TextView
                android:id="@+id/main_tab_4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textSize="@dimen/font_style_13"
                android:text="@string/footer_consultation"
                android:textColor="@color/footer_somber" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>