<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/view_header_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/header_background"
        android:orientation="horizontal"
        android:paddingRight="5dp" >

        <LinearLayout
            android:id="@+id/view_header_left_layout"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <com.uyi.app.ui.custom.RoundedImageView
                android:id="@+id/view_header_left"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_margin="3dp"
                android:src="@drawable/user_img"
                android:visibility="visible" />
            <LinearLayout 
                android:id="@+id/view_header_left_layout_return"
                android:layout_width="60dp" 
                android:layout_height="match_parent" 
                android:gravity="center_vertical"
                android:visibility="gone"
                android:orientation="horizontal">
                  <ImageView
		               android:id="@+id/imageView1"
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:layout_margin="5dp"
		               android:src="@drawable/left_arrow_back" />
	            <TextView 
	                android:layout_width="wrap_content" 
	                android:layout_height="wrap_content" 
	                android:textColor="@color/blue"
	                android:textSize="@dimen/font_style_14"
	                android:text="返回"/>
                
            </LinearLayout>
            
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_header_center"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/view_header_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="@dimen/font_style_17"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/view_header_layout_content"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/blue_stroke"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/view_header_one"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue_bg"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:minEms="4"
                    android:maxEms="7"
                     android:textSize="@dimen/font_style_14"
                    android:text="@string/all_consultation" />

                <TextView
                    android:id="@+id/view_header_two"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/list_item_content_color"
                    android:textSize="@dimen/font_style_14"
                   android:minEms="4"
                    android:maxEms="7"
                    android:text="@string/follow" />

                <TextView
                    android:id="@+id/view_header_three"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                   android:minEms="4"
                    android:maxEms="7"
                    android:textSize="@dimen/font_style_14"
                    android:textColor="@color/list_item_content_color"
                    android:text="@string/line_check" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_header_right"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible" >

            <ImageView
                android:id="@+id/view_header_right_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/manager_icon" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>